# MediaCompressTelegram

./: LICENSE  README.md  settings.gradle
app/: README.md  build.gradle
app/src/androidTest/java/chengdu/ws/mediacompress/: ExampleInstrumentedTest.java
app/src/androidTest/java/chengdu/ws/mediacompress/telegram/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/chengdu/ws/mediacompress/: Application.java  MainActivity.java
app/src/main/java/chengdu/ws/mediacompress/telegram/: Application.java  MainActivity.java
app/src/main/res/layout/: app_activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/chengdu/ws/mediacompress/: ExampleUnitTest.java
app/src/test/java/chengdu/ws/mediacompress/telegram/: ExampleUnitTest.java
common/src/androidTest/java/chengdu/ws/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/java/chengdu/ws/common/: FileUtils.java  Scheduler.java
common/src/test/java/chengdu/ws/common/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
media-compress-signal/: build.gradle
media-compress-signal/jni/utils/: org_thoughtcrime_securesms_util_FileUtils.cpp  org_thoughtcrime_securesms_util_FileUtils.h
media-compress-signal/src/main/java/org/thoughtcrime/securesms/media/: MediaInput.java
media-compress-signal/src/main/java/org/thoughtcrime/securesms/util/: ServiceUtil.java
media-compress-signal/src/main/java/org/thoughtcrime/securesms/video/: MediaController.java  StreamingTranscoder.java
media-compress-signal/src/main/java/org/thoughtcrime/securesms/video/videoconverter/: AudioTrackConverter.java  InputSurface.java  MediaConverter.java  OutputSurface.java  TextureRender.java
media-compress-telegram/: build.gradle
media-compress-telegram/jni/ffmpeg/include/libavformat/: isom.h
media-compress-telegram/src/androidTest/java/chengdu/ws/telegram/: ExampleInstrumentedTest.java
media-compress-telegram/src/main/: AndroidManifest.xml
media-compress-telegram/src/main/java/org/telegram/messenger/: MediaController.java  Scheduler.java  VideoConvertUtil.java  VideoEditedInfo.java
media-compress-telegram/src/main/java/org/telegram/messenger/video/: MP4Builder.java  MediaCodecVideoConvertor.java  TextureRenderer.java  Track.java
media-compress-telegram/src/main/java/org/telegram/ui/Components/: AnimatedFileDrawable.java  FilterShaders.java
media-compress-telegram/src/test/java/chengdu/ws/telegram/: ExampleUnitTest.java
signal/: build.gradle
signal/src/androidTest/java/chengdu/ws/signal/: ExampleInstrumentedTest.java
signal/src/main/: AndroidManifest.xml
signal/src/main/java/org/thoughtcrime/securesms/util/: FileMediaDataSource.java  FileUtils.java  MemoryFileDescriptor.java  Scheduler.java  VideoConvertUtil.java
signal/src/main/java/org/thoughtcrime/securesms/video/: InMemoryTranscoder.java  MediaController.java  StreamingTranscoder.java  VideoUtil.java
signal/src/main/java/org/thoughtcrime/securesms/video/videoconverter/: VideoTrackConverter.java
signal/src/test/java/chengdu/ws/signal/: ExampleUnitTest.java
telegram/: build.gradle
telegram/jni/: CMakeLists.txt  gifvideo.cpp  jni.c
telegram/jni/ffmpeg/include/libavutil/: intmath.h
telegram/src/main/java/org/telegram/messenger/: AndroidUtilities.java  FileUtils.java  MediaController.java  Utilities.java  VideoConvertUtil.java  VideoEditedInfo.java  VideoUtil.java
telegram/src/main/java/org/telegram/messenger/video/: AudioRecoder.java  MediaCodecVideoConvertor.java  Mp4Movie.java  OutputSurface.java  Sample.java  TextureRenderer.java  template.java
telegram/src/main/java/org/telegram/ui/Components/: FilterShaders.java  PhotoFilterView.java
(+3 files in other folders)
